--- a/utils/src/test/resources/application.yml
+++ b/utils/src/test/resources/application.yml
@@ -21,3 +21,88 @@ social:
       client-id: 233************
       client-secret: 233************************************
       redirect-uri: ${social.domain}/oauth/redirect/dingtalk
+#服务器配置
+server:
+  undertow:
+    # 以下的配置会影响buffer,这些buffer会用于服务器连接的IO操作,有点类似netty的池化内存管理
+    buffer-size: 1024
+    # 是否分配的直接内存
+    direct-buffers: true
+    # 线程配置
+    threads:
+      # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
+      io: 16
+      # 阻塞任务线程池, 当执行类似servlet请求阻塞操作, undertow会从这个线程池中取得线程,它的值设置取决于系统的负载
+      worker: 400
+
+#feign配置
+feign:
+  sentinel:
+    enabled: true
+  okhttp:
+    enabled: true
+  httpclient:
+    enabled: false
+
+#对外暴露端口
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
+#knife4j配置
+knife4j:
+  #启用
+  enable: true
+  #基础认证
+  basic:
+    enable: false
+    username: blade
+    password: blade
+  #增强配置
+  setting:
+    enableSwaggerModels: true
+    enableDocumentManage: true
+    enableHost: false
+    enableHostText: http://localhost
+    enableRequestCache: true
+    enableFilterMultipartApis: false
+    enableFilterMultipartApiMethodType: POST
+    language: zh-CN
+    enableFooter: false
+    enableFooterCustom: true
+    footerCustomContent: Copyright © 2022 SpringBlade All Rights Reserved
+
+#swagger配置信息
+swagger:
+  title: SpringBlade 接口文档系统
+  description: SpringBlade 接口文档系统
+  version: 3.4.1
+  license: Powered By SpringBlade
+#  licenseUrl: https://bladex.vip
+#  terms-of-service-url: https://bladex.vip
+#  contact:
+#    name: smallchill
+#    email: smallchill@163.com
+#    url: https://gitee.com/smallc
+
+wlpiaoyi:
+  ee:
+    cors:
+      data:
+        snowflake:
+          workerId: 1
+          datacenterId: 1
+        json:
+          patterns: '(/.*)'
+        security:
+          patterns: '(/.*)'
+        idempotence:
+          patterns: '(/.*)'
+          duriTime: 3
+          sectionTime: 1200
+        charset_name: 'UTF-8'
