--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
     <packaging>pom</packaging>
 
     <!-- lookup parent from repository -->
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-<!--        <version>2.1.6.RELEASE</version>-->
-<!--        <version>2.3.9.RELEASE</version>-->
-        <version>2.7.8</version>
-        <relativePath/>
-    </parent>
+<!--    <parent>-->
+<!--        <groupId>org.springframework.boot</groupId>-->
+<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
+<!--&lt;!&ndash;        <version>2.1.6.RELEASE</version>&ndash;&gt;-->
+<!--&lt;!&ndash;        <version>2.3.9.RELEASE</version>&ndash;&gt;-->
+<!--        <version>2.7.8</version>-->
+<!--        <relativePath/>-->
+<!--    </parent>-->
 
     <properties>
         <ee.project.version>1.0.1-SNAPSHOT</ee.project.version>
@@ -28,26 +28,49 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring.boot.version>2.7.8</spring.boot.version>
-        <spring.cloud.version>2021.0.3</spring.cloud.version>
+        <spring.boot.version>2.6.14</spring.boot.version>
         <spring.platform.version>Cairo-SR8</spring.platform.version>
-        <alibaba.cloud.version>2021.0.1.0</alibaba.cloud.version>
-        <alibaba.seata.version>1.5.2</alibaba.seata.version>
-        <alibaba.nacos.version>2.1.0</alibaba.nacos.version>
+        <!-- 微服务 -->
+        <spring.cloud.version>2021.0.3</spring.cloud.version>
+        <spring.cloud.alibaba.version>2021.0.1.0</spring.cloud.alibaba.version>
+        <alibaba.nacos.version>2.0.4</alibaba.nacos.version>
 
-        <mica.auto.version>1.2.5</mica.auto.version>
-        <hutool.version>5.8.5</hutool.version>
-        <commons.io.version>2.11.0</commons.io.version>
-        <alibaba.fastjson.version>2.0.13</alibaba.fastjson.version>
-        <pagehelper.boot.version>1.4.1</pagehelper.boot.version>
+        <xxl-job-core.version>2.2.0</xxl-job-core.version>
+        <fastjson.version>1.2.83</fastjson.version>
+        <pegdown.version>1.6.0</pegdown.version>
+        <knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
+        <knife4j-spring-ui.version>2.0.9</knife4j-spring-ui.version>
+        <!-- 数据库驱动 -->
+        <postgresql.version>42.2.25</postgresql.version>
+        <ojdbc6.version>11.2.0.3</ojdbc6.version>
+        <sqljdbc4.version>4.0</sqljdbc4.version>
+        <mysql-connector-java.version>8.0.27</mysql-connector-java.version>
+        <hutool.version>5.3.8</hutool.version>
 
-        <opensagres.xdocreport.version>1.0.6</opensagres.xdocreport.version>
-        <poi.ooxml-schemas.version>1.3</poi.ooxml-schemas.version>
-        <jsoup.jsoup.version>1.8.3</jsoup.jsoup.version>
-        <springframework.spring-beans.version>5.3.19</springframework.spring-beans.version>
-        <docx4j.version>6.0.1</docx4j.version>
-        <alibaba.easyexcel.version>3.0.1</alibaba.easyexcel.version>
-        <spire.doc.free.version>3.9.0</spire.doc.free.version>
+        <!-- 持久层 -->
+        <mybatis-plus.version>3.5.1</mybatis-plus.version>
+        <dynamic-datasource-spring-boot-starter.version>3.2.0</dynamic-datasource-spring-boot-starter.version>
+        <druid.version>1.1.22</druid.version>
+        <minidao.version>1.9.0</minidao.version>
+
+        <!-- 积木报表-->
+        <jimureport-spring-boot-starter.version>1.5.4</jimureport-spring-boot-starter.version>
+        <commons.version>2.6</commons.version>
+        <aliyun-java-sdk-dysmsapi.version>2.1.0</aliyun-java-sdk-dysmsapi.version>
+        <aliyun.oss.version>3.11.2</aliyun.oss.version>
+        <!-- shiro -->
+        <shiro.version>1.10.0</shiro.version>
+        <java-jwt.version>3.11.0</java-jwt.version>
+        <shiro-redis.version>3.1.0</shiro-redis.version>
+        <codegenerate.version>1.4.3</codegenerate.version>
+        <autopoi-web.version>1.4.5</autopoi-web.version>
+        <minio.version>8.0.3</minio.version>
+        <justauth-spring-boot-starter.version>1.3.4</justauth-spring-boot-starter.version>
+        <dom4j.version>1.6.1</dom4j.version>
+        <qiniu-java-sdk.version>7.4.0</qiniu-java-sdk.version>
+        <!-- Log4j2爆雷漏洞 -->
+        <log4j2.version>2.17.0</log4j2.version>
+        <logback.version>1.2.9</logback.version>
 
         <skipTests>true</skipTests>
     </properties>
@@ -73,6 +96,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -88,17 +112,25 @@
                 <scope>import</scope>
             </dependency>
 
+            <!-- spring-cloud-alibaba -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring.cloud.alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!-- Nacos -->
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-                <version>${alibaba.cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-                <version>${alibaba.cloud.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.alibaba.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
+<!--                <version>${alibaba.cloud.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>com.alibaba.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
+<!--                <version>${alibaba.cloud.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>com.alibaba.nacos</groupId>
                 <artifactId>nacos-client</artifactId>
@@ -124,23 +156,6 @@
             <artifactId>junit</artifactId>
 <!--            <version>4.12</version>-->
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-nop</artifactId>
         </dependency>
     </dependencies>
 
