--- a/utils/src/test/resources/application.yml
+++ b/utils/src/test/resources/application.yml
@@ -1,5 +1,6 @@
 #服务器配置
 server:
+  port: 8080
   undertow:
     # 以下的配置会影响buffer,这些buffer会用于服务器连接的IO操作,有点类似netty的池化内存管理
     buffer-size: 1024
@@ -11,7 +12,20 @@ server:
       io: 16
       # 阻塞任务线程池, 当执行类似servlet请求阻塞操作, undertow会从这个线程池中取得线程,它的值设置取决于系统的负载
       worker: 400
-
+log:
+  out:
+    level:
+      INFO
+spring:
+  jackson:
+    time-zone: Asia/Shanghai
+    serialization:
+      # Date返回前端转时间戳 但不能解决LocalDateTime转时间戳（JacksonCustomizerConfig类解决）
+      write-dates-as-timestamps: true
+  output:
+    ansi:
+      enabled:
+        ALWAYS
 #feign配置
 feign:
   sentinel:
