--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.wlpiaoyi</groupId>
     <artifactId>framework.ee</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <!-- lookup parent from repository -->
@@ -20,8 +20,8 @@
 <!--    </parent>-->
 
     <properties>
-        <ee.project.version>1.0.1-SNAPSHOT</ee.project.version>
-        <fw.project.version>1.0.1-SNAPSHOT</fw.project.version>
+        <ee.project.version>1.0.2-SNAPSHOT</ee.project.version>
+        <fw.project.version>1.0.2-SNAPSHOT</fw.project.version>
 
         <java.version>1.8</java.version>
         <maven.plugin.version>3.8.1</maven.plugin.version>
@@ -78,6 +78,7 @@
 
     <modules>
         <module>utils</module>
+        <module>activiti</module>
     </modules>
 
     <dependencyManagement>
