--- a/file.manager/pom.xml
+++ b/file.manager/pom.xml
@@ -46,6 +46,29 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- ffmpeg -->
+<!--        <dependency>-->
+<!--            <groupId>org.bytedeco</groupId>-->
+<!--            <artifactId>ffmpeg</artifactId>-->
+<!--            <version>5.1.2-1.5.8</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.9</version>
+        </dependency>
+<!--        &lt;!&ndash; Additional dependencies required to use CUDA and cuDNN &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.bytedeco</groupId>-->
+<!--            <artifactId>opencv-platform-gpu</artifactId>-->
+<!--            <version>4.7.0-1.5.9</version>-->
+<!--        </dependency>-->
+<!--        &lt;!&ndash; Optional GPL builds with (almost) everything enabled &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.bytedeco</groupId>-->
+<!--            <artifactId>ffmpeg-platform-gpl</artifactId>-->
+<!--            <version>6.0-1.5.9</version>-->
+<!--        </dependency>-->
 
         <!-- swagger3工具 -->
         <dependency>
