--- a/file.manager/src/main/resources/application.yml
+++ b/file.manager/src/main/resources/application.yml
@@ -30,13 +30,13 @@ spring:
 #mybatis
 mybatis-plus:
   # 配置mapper的扫描，找到所有的mapper.xml映射文件
-  mapperLocations: classpath*:mapper/**/*Mapper.xml
+  mapperLocations: classpath*:**/mapper/**/*Mapper.xml
   #（路径）
-  type-handlers-package: com.icss.poie.tools.handler.obj
+  type-handlers-package: org.wlpiaoyi.framework.ee.file.manager
   # 加载全局的配置文件
 #  configLocation: classpath:mybatis/mybatis-config.xml
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.icss.poie.**.entity
+  typeAliasesPackage: org.wlpiaoyi.framework.ee.file.manager.**.entity
   global-config:
     # 数据库相关配置
     db-config:
