--- a/file.manager/pom.xml
+++ b/file.manager/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>org.wlpiaoyi.framework.ee</groupId>
     <artifactId>file.manager</artifactId>
+    <version>1.0.2-SNAPSHOT</version>
 
     <packaging>jar</packaging>
     <name>file.manager</name>
@@ -102,7 +103,6 @@
             <artifactId>commons-fileupload</artifactId>
             <version>${commons.fileupload.version}</version>
         </dependency>
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -110,7 +110,6 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.4.3</version>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -133,9 +132,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.wlpiaoyi.framework</groupId>
+            <groupId>org.wlpiaoyi.framework.ee</groupId>
             <artifactId>utils</artifactId>
+            <version>${ee.project.version}</version>
         </dependency>
+
 
     </dependencies>
 
