--- a/pom.xml
+++ b/pom.xml
@@ -12,75 +12,34 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.6</version>
+<!--        <version>2.1.6.RELEASE</version>-->
+<!--        <version>2.3.9.RELEASE</version>-->
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
-    <!-- lookup parent from repository -->
-<!--    <parent>-->
-<!--        <groupId>org.springframework.boot</groupId>-->
-<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
-<!--&lt;!&ndash;        <version>2.1.6.RELEASE</version>&ndash;&gt;-->
-<!--&lt;!&ndash;        <version>2.3.9.RELEASE</version>&ndash;&gt;-->
-<!--        <version>2.7.8</version>-->
-<!--        <relativePath/>-->
-<!--    </parent>-->
 
     <properties>
         <ee.project.version>1.0.2-SNAPSHOT</ee.project.version>
         <fw.project.version>1.0.2-SNAPSHOT</fw.project.version>
         <java.version>1.8</java.version>
-        <maven.plugin.version>3.8.1</maven.plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring.boot.version>2.6.14</spring.boot.version>
+        <spring.boot.version>2.7.6</spring.boot.version>
         <spring.platform.version>Cairo-SR8</spring.platform.version>
         <!-- 微服务 -->
         <spring.cloud.version>2021.0.3</spring.cloud.version>
-        <spring.cloud.alibaba.version>2021.0.1.0</spring.cloud.alibaba.version>
-        <alibaba.nacos.version>2.0.4</alibaba.nacos.version>
+        <spring.cloud.alibaba.version>2021.0.5.0</spring.cloud.alibaba.version>
 
-        <!-- Web 相关 -->
-        <servlet.versoin>2.5</servlet.versoin>
-        <swagger.version>2.2.15</swagger.version>
+        <!-- Swagger.V3 -->
+        <swagger.version>2.2.19</swagger.version>
         <springdoc.version>1.7.0</springdoc.version>
         <knife4j.version>4.3.0</knife4j.version>
 
-        <xxl-job-core.version>2.2.0</xxl-job-core.version>
-        <fastjson.version>1.2.83</fastjson.version>
-        <pegdown.version>1.6.0</pegdown.version>
-        <knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
-        <knife4j-spring-ui.version>2.0.9</knife4j-spring-ui.version>
-        <!-- 数据库驱动 -->
-        <postgresql.version>42.2.25</postgresql.version>
-        <ojdbc6.version>11.2.0.3</ojdbc6.version>
-        <sqljdbc4.version>4.0</sqljdbc4.version>
-        <mysql-connector-java.version>8.0.27</mysql-connector-java.version>
-        <hutool.version>5.3.8</hutool.version>
-
-        <!-- 持久层 -->
-        <mybatis-plus.version>3.5.1</mybatis-plus.version>
-        <dynamic-datasource-spring-boot-starter.version>3.2.0</dynamic-datasource-spring-boot-starter.version>
-        <druid.version>1.1.22</druid.version>
-        <minidao.version>1.9.0</minidao.version>
-
-        <!-- 积木报表-->
-        <jimureport-spring-boot-starter.version>1.5.4</jimureport-spring-boot-starter.version>
-        <commons.version>2.6</commons.version>
-        <aliyun-java-sdk-dysmsapi.version>2.1.0</aliyun-java-sdk-dysmsapi.version>
-        <aliyun.oss.version>3.11.2</aliyun.oss.version>
-        <!-- shiro -->
-        <shiro.version>1.10.0</shiro.version>
-        <java-jwt.version>3.11.0</java-jwt.version>
-        <shiro-redis.version>3.1.0</shiro-redis.version>
-        <codegenerate.version>1.4.3</codegenerate.version>
-        <autopoi-web.version>1.4.5</autopoi-web.version>
-        <minio.version>8.0.3</minio.version>
-        <justauth-spring-boot-starter.version>1.3.4</justauth-spring-boot-starter.version>
-        <dom4j.version>1.6.1</dom4j.version>
-        <qiniu-java-sdk.version>7.4.0</qiniu-java-sdk.version>
-        <!-- Log4j2爆雷漏洞 -->
-        <log4j2.version>2.17.0</log4j2.version>
-        <logback.version>1.2.9</logback.version>
+        <!-- 数据库 -->
+        <mybatis-spring-boot-starter.version>2.3.2</mybatis-spring-boot-starter.version>
+        <com.baomidou.mybatis-plus.version>3.5.4</com.baomidou.mybatis-plus.version>
 
         <skipTests>true</skipTests>
     </properties>
@@ -122,7 +81,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
             <!-- spring-cloud-alibaba -->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
@@ -136,20 +94,31 @@
                 <artifactId>nacos-client</artifactId>
                 <version>${alibaba.nacos.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-plus-generator</artifactId>
-                <version>3.5.1</version>
-            </dependency>
+            <!-- 数据库 -->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>2.3.1</version>
+                <version>${mybatis-spring-boot-starter.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok-maven-plugin</artifactId>
-                <version>1.18.20.0</version>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${com.baomidou.mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>${com.baomidou.mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-core</artifactId>
+                <version>${com.baomidou.mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-extension</artifactId>
+                <version>${com.baomidou.mybatis-plus.version}</version>
             </dependency>
             <!-- swagger3工具 -->
             <dependency>
@@ -173,6 +142,11 @@
                 <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-maven-plugin</artifactId>
+                <version>1.18.20.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -186,11 +160,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-log4j12</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -211,11 +185,16 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.wlpiaoyi.framework.datasource</groupId>
+                <artifactId>generator-plugin</artifactId>
+                <version>${fw.project.version}</version>
+            </plugin>
             <!--maven打包-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>${maven-jar-plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -225,13 +204,21 @@
                     </archive>
                 </configuration>
             </plugin>
-
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <!-- JUnit 配置 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!--忽略测试启动类 -->
+                <configuration>
+                    <skip>${skipTests}</skip>
                 </configuration>
             </plugin>
         </plugins>
