--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>mybatis-plus-extension</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
 
     </dependencies>
 
