--- a/file.manager/pom.xml
+++ b/file.manager/pom.xml
@@ -18,7 +18,11 @@
     <description>Japanese food restaurant</description>
 
     <properties>
+        <!-- 文件拷贝时的编码 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- 编译时的编码 -->
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <java.version>1.8</java.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <commons.io.version>2.7</commons.io.version>
@@ -52,17 +56,25 @@
         </dependency>
 
 
+<!--        &lt;!&ndash; 使用google工具（推荐，压缩率高，图片清晰） &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>net.coobird</groupId>-->
+<!--            <artifactId>thumbnailator</artifactId>-->
+<!--            <version>0.4.20</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.drewnoakes/metadata-extractor -->
+
         <!-- ffmpeg -->
 <!--        <dependency>-->
 <!--            <groupId>org.bytedeco</groupId>-->
 <!--            <artifactId>ffmpeg</artifactId>-->
 <!--            <version>5.1.2-1.5.8</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.bytedeco</groupId>
-            <artifactId>javacv-platform</artifactId>
-            <version>1.5.9</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.bytedeco</groupId>-->
+<!--            <artifactId>javacv-platform</artifactId>-->
+<!--            <version>1.5.9</version>-->
+<!--        </dependency>-->
 <!--        &lt;!&ndash; Additional dependencies required to use CUDA and cuDNN &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>org.bytedeco</groupId>-->
