--- a/resource/src/main/resources/config.properties
+++ b/resource/src/main/resources/config.properties
@@ -8,12 +8,12 @@
 #projectName=poie
 #excludeColumns=id,create_user,create_time,update_time,update_user,status,create_dept,is_deleted,tenantId
 
-url=jdbc:mysql://127.0.0.1:3306/file_manager?useSSL=false&useUnicode=true&characterEncoding=utf-8&transformedBitIsBoolean=true&tinyInt1isBit=false&allowMultiQueries=true&serverTimezone=GMT%2B8
-databaseName=file_manager
+url=jdbc:mysql://127.0.0.1:3306/resource_dev?useSSL=false&useUnicode=true&characterEncoding=utf-8&transformedBitIsBoolean=true&tinyInt1isBit=false&allowMultiQueries=true&serverTimezone=GMT%2B8
+databaseName=resource_dev
 userName=root
 password=00000000
 packagePath=org.wlpiaoyi.framework.ee.resource
 tablePrefix=biz
-tableNamePattern=biz_%
+tableNamePattern=biz_video_info
 projectName=resource
 excludeColumns=id,create_user,create_time,update_time,update_user,status,create_dept,is_deleted,tenantId
