--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.6</version>
+        <version>2.7.18</version>
+<!--        <version>2.7.6</version>-->
 <!--        <version>2.1.6.RELEASE</version>-->
 <!--        <version>2.3.9.RELEASE</version>-->
         <relativePath /> <!-- lookup parent from repository -->
@@ -185,11 +186,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.wlpiaoyi.framework.datasource</groupId>
-                <artifactId>generator-plugin</artifactId>
-                <version>${fw.project.version}</version>
-            </plugin>
             <!--maven打包-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
