--- a/resource/pom.xml
+++ b/resource/pom.xml
@@ -57,11 +57,11 @@
 
 
         <!-- 使用google工具（推荐，压缩率高，图片清晰） -->
-<!--        <dependency>-->
-<!--            <groupId>net.coobird</groupId>-->
-<!--            <artifactId>thumbnailator</artifactId>-->
-<!--            <version>0.4.20</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.20</version>
+        </dependency>
 
         <!-- 视频工具 -->
         <dependency>
