文件扫描模块更新

--- a/fileScan/src/main/resources/application-dev.yml
+++ b/fileScan/src/main/resources/application-dev.yml
@@ -3,8 +3,12 @@ server:
     basedir: D:/upload/temp/
 #dev环境  mysql8.0
 resource:
+  ethName:
+#    eth2
+    wlan0
   fileMenu:
-    E:/Videos/
+#    E:/Videos/
+    D:\wlpia\Documents\Temp\suffix\
 
 # mongodb 日志级别
 logging:
