优化代码 和 增加文件格式验证

--- a/fileScan/src/main/resources/application.yml
+++ b/fileScan/src/main/resources/application.yml
@@ -14,7 +14,7 @@ server :
     #xx 报错修改的地方
     max-connections: 200000
     max-http-form-post-size: 9000000
-    keep-alive-timeout: 12000000
+    keep-alive-timeout: 60000
     threads:
       max: 128
       min-spare: 5
