代理模块移植

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <module>activiti</module>
         <module>resource</module>
         <module>fileScan</module>
+        <module>proxy</module>
     </modules>
 
     <dependencyManagement>
