--- a/fileScan/src/main/resources/application-dev.yml
+++ b/fileScan/src/main/resources/application-dev.yml
@@ -6,9 +6,10 @@ resource:
   ethName:
     eth2
 #    wlan0
+  remoteIp:
   fileMenu:
-    E:/Videos/
-#    D:\wlpia\Documents\Temp\suffix\
+#    E:/Videos/
+    D:\wlpia\Documents\Temp\suffix\
 
 # mongodb 日志级别
 logging:
