--- a/fileScan/src/main/resources/application-dev.yml
+++ b/fileScan/src/main/resources/application-dev.yml
@@ -10,11 +10,6 @@ fileScan:
       wlpiaoyi
     password:
       123456
-  ethName:
-    wireless_32768
-#    eth2
-#    wlan0
-  remoteIp:
   fileMenu:
-    E:/Videos/
-#    D:\wlpia\Documents\Temp\suffix\
+#    E:/Videos/
+    D:\wlpia\Documents\Temp\suffix\
