初步升级好jdk21 和对应的三方库版本

--- a/activiti/pom.xml
+++ b/activiti/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.wlpiaoyi</groupId>
         <artifactId>framework.ee</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2-BATA-JDK21</version>
     </parent>
 
     <groupId>org.wlpiaoyi.framework.ee</groupId>
