--- a/fileScan/pom.xml
+++ b/fileScan/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>framework.ee</artifactId>
         <groupId>org.wlpiaoyi</groupId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2-BATA-JDK21</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -22,7 +22,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- 编译时的编码 -->
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        <java.version>1.8</java.version>
+        <java.version>21</java.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <commons.io.version>2.7</commons.io.version>
         <!-- Web 相关 -->
@@ -37,6 +37,10 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+        </dependency>
         <!-- 架构 -->
         <dependency>
             <artifactId>spring-boot-starter-validation</artifactId>
