--- a/pom.xml
+++ b/pom.xml
@@ -6,29 +6,30 @@
 
     <groupId>org.wlpiaoyi</groupId>
     <artifactId>framework.ee</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2-BATA-JDK21</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.18</version>
-<!--        <version>2.7.6</version>-->
-<!--        <version>2.1.6.RELEASE</version>-->
-<!--        <version>2.3.9.RELEASE</version>-->
+        <version>3.2.4</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
-        <ee.project.version>1.0.2-SNAPSHOT</ee.project.version>
-        <fw.project.version>1.0.2-SNAPSHOT</fw.project.version>
-        <java.version>1.8</java.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
+        <ee.project.version>1.0.2-BATA-JDK21</ee.project.version>
+        <fw.project.version>1.0.2-BATA-JDK21</fw.project.version>
+        <java.version>21</java.version>
+
+        <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
+
+        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>3.4.0</maven-jar-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring.boot.version>2.7.6</spring.boot.version>
+        <spring.boot.version>3.2.4</spring.boot.version>
         <spring.platform.version>Cairo-SR8</spring.platform.version>
+        <jakarta.servlet-api.version>6.1.0-M2</jakarta.servlet-api.version>
         <!-- 微服务 -->
         <spring.cloud.version>2021.0.3</spring.cloud.version>
         <spring.cloud.alibaba.version>2021.0.5.0</spring.cloud.alibaba.version>
@@ -100,6 +101,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>jakarta.servlet</groupId>
+                <artifactId>jakarta.servlet-api</artifactId>
+                <version>${jakarta.servlet-api.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.wlpiaoyi</groupId>
                 <artifactId>framework</artifactId>
@@ -192,7 +200,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok-maven-plugin</artifactId>
-                <version>1.18.20.0</version>
+                <version>${lombok-maven-plugin.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
