--- a/resource/pom.xml
+++ b/resource/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.wlpiaoyi</groupId>
         <artifactId>framework.ee</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2-BATA-JDK21</version>
     </parent>
 
     <groupId>org.wlpiaoyi.framework.ee</groupId>
     <artifactId>resource</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2-BATA-JDK21</version>
 
     <packaging>jar</packaging>
     <name>resource</name>
@@ -23,7 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- 编译时的编码 -->
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        <java.version>1.8</java.version>
+        <java.version>21</java.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <commons.io.version>2.7</commons.io.version>
         <!-- Web 相关 -->
@@ -36,6 +36,11 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+        </dependency>
         <!-- 使用google工具（推荐，压缩率高，图片清晰） -->
         <dependency>
             <groupId>net.coobird</groupId>
