--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.wlpiaoyi</groupId>
         <artifactId>framework.ee</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2-BATA-JDK21</version>
     </parent>
 
 
@@ -66,8 +66,8 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
