--- a/fileScan/pom.xml
+++ b/fileScan/pom.xml
@@ -66,6 +66,15 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.mybatis.spring.boot</groupId>-->
+<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.xerial</groupId>-->
+<!--            <artifactId>sqlite-jdbc</artifactId>-->
+<!--        </dependency>-->
+
         <!--io常用工具类 -->
         <dependency>
             <groupId>commons-io</groupId>
