--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,17 @@
         <knife4j.version>4.3.0</knife4j.version>
 
         <!-- 数据库 -->
+<!--<<<<<<< Updated upstream-->
         <mybatis-spring-boot-starter.version>2.3.2</mybatis-spring-boot-starter.version>
         <com.baomidou.mybatis-plus.version>3.5.4</com.baomidou.mybatis-plus.version>
+        <sqlite-jdbc.version>3.45.3.0</sqlite-jdbc.version>
+        <mybatis-spring.version>3.0.3</mybatis-spring.version>
+<!--=======-->
+<!--        <sqlite-jdbc.version>3.45.3.0</sqlite-jdbc.version>-->
+<!--        <mybatis-spring.version>3.0.3</mybatis-spring.version>-->
+<!--        <mybatis-spring-boot-starter.version>3.0.3</mybatis-spring-boot-starter.version>-->
+<!--        <com.baomidou.mybatis-plus.version>3.5.6</com.baomidou.mybatis-plus.version>-->
+<!--&gt;>>>>>> Stashed changes-->
 
         <skipTests>true</skipTests>
     </properties>
@@ -142,6 +151,16 @@
                 <version>${alibaba.nacos.version}</version>
             </dependency>
             <!-- 数据库 -->
+            <dependency>
+                <groupId>org.xerial</groupId>
+                <artifactId>sqlite-jdbc</artifactId>
+                <version>${sqlite-jdbc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis-spring.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
